align and font size fixed
Fixed buttons
Added a new box button
Align and font size fixed

--- a/stylesheets/_forms.scss
+++ b/stylesheets/_forms.scss
@@ -1,68 +1,48 @@
-
-/*
-.box-list{
-  width: 950px;
-  margin: auto;
-  max-width: 100%;
-  margin-top: 30px;
-  padding: 20px 10px;
-}
-*/
-
-/*.fundo_branco{
-	background: white;
-	background-clip: content-box;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-}
-*/
 /*------------------------------------*\
  #BOXES
-\*------------------------------------*/
+ \*------------------------------------*/
 
-.box{
-	border: 1px solid $light;
+ .box{
+   border: 1px solid $light;
     //box-shadow: 0px 2px 6px 0px rgba($black,0.2);
     margin:5px;
     background: rgba($light, 0.2);
     text-align: left;
     height: 100%;
-}
+  }
 
-.box__title{
-	color: $main-color-dark;
-}
+  .box__title{
+   color: $main-color-dark;
+ }
 
-.box__desc{
-	font-size: 15px;
-	color: $main-color;
-}
+ .box__desc{
+   font-size: 15px;
+   color: $main-color;
+ }
 
-.box__info{
-	font-size: 13px;
-	color: $grey;
-}
+ .box__info{
+   font-size: 13px;
+   color: $grey;
+ }
 
-.box-container, .box-action{
-	display:flex;
-	flex-direction:column;
-}
+ .box-container, .box-action{
+   display:flex;
+   flex-direction:column;
+ }
 
-.box-action{
-	align-self:stretch;
-	justify-content: flex-start;
-	border-left: 1px solid $light;
-	form{
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		flex-grow: 1;
-		&:first-child {
-			border-bottom: 1px solid $light;
-		}
-	}
+ .box-action{
+   align-self:stretch;
+   justify-content: flex-start;
+   border-left: 1px solid $light;
+   form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
+    &:first-child {
+     border-bottom: 1px solid $light;
+   }
+ }
 }
 
 .basic-info{
@@ -87,36 +67,29 @@
 }
 /*------------------------------------*\
  #BOXES_NAV_BAR_STATUS
-\*------------------------------------*/
+ \*------------------------------------*/
 
-.father{
-	display:flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-}
-
-.box__nav{
-	align-self: center;
-	margin-bottom: $spacing--x-large;
-	padding: $spacing--small 0px;
+ .box__nav{
+   align-self: center;
+   margin-bottom: $spacing--x-large;
+   padding: $spacing--small 0px;
 	//border-top: 1px solid $main-color50;
     //border-bottom: 1px solid $main-color50; 
     li{
     	display: inline;
     }  
-}
+  }
 
-.box__nav__item{
-	display: inline;
-	border: solid $light;
-	border-width: 1px;
-	margin: 5px;
-	padding: 12px;
-	font-weight: 600;
-	&.active{
-		color:$main-color-dark;
-	}
+  .box__nav__item{
+   display: inline;
+   border: solid $light;
+   border-width: 1px;
+   margin: 5px;
+   padding: 12px;
+   font-weight: 600;
+   &.active{
+    color:$main-color-dark;
+  }
 }
 
 .container-fluid{
@@ -127,39 +100,65 @@
 		padding: initial;
 	}
 }
+
+.head-navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  span{
+    display: none;
+  }
+  .col-xs-4{
+    align-self: center;
+  }
+  a{
+    color: $light;
+  }
+
+  @include breakpoint($min: sm){
+    span{
+      display: flex;
+    }
+    h2{
+      align-self: middle;
+    }
+  }
+}
+
 /*------------------------------------*\
  #BOXES_BUTTONS_&_INPUTS
-\*------------------------------------*/
+ \*------------------------------------*/
 
-.btn-default{
-	border: none;
-    padding: $spacing--medium;
-    background: black;
-    color: white;
-    //width: 100%;
-    transition: all 0.2s ease-in-out;
-    font-size: 0.9375rem;
-    text-align: center;
-    cursor: pointer;
-    &:hover{
-    	background: rgba($main-color,0.7);
-    }
+ .btn-default{
+  border: none;
+  padding: $spacing--medium;
+  background: black;
+  color: white;
+  width: 100%;
+  transition: all 0.2s ease-in-out;
+  font-size: 0.9375rem;
+  text-align: center;
+  cursor: pointer;
+  &:hover{
+   background: rgba($main-color,0.7);
+ }
 }
 
 .btn-dark{
 	@extend .btn-default;
 	background: none;
-	&:hover{
-    	background: rgba($main-color-dark,0.7);
-    }
-}
+  &:hover{
+   background: none;
+ }
+
+  }
 
 .btn-danger{
 	@extend .btn-default;
 	background: $error-color;
 	&:hover{
-    	background: rgba($error-color,0.8);
-    }
+   background: rgba($error-color,0.8);
+ }
 }
 
 .barra{
@@ -169,8 +168,19 @@
 	padding: 15px;
 }
 
-.button_url{
-	display:flex;
-	flex-direction:column;
-	flex-grow:2;
+.url_btn{
+	margin:0;
+	padding:0;
+  button{
+    &:first-child{
+      border-right: 1px solid $light;
+    }
+  }
+}
+
+.hoverable{
+  &:hover{
+   background: rgba($main-color-dark,0.7);
+ }
+
 }
